Home Page 1.Restructured Home page content and added Name panels, new font, and fixed alignment

--- a/indexStyles.css
+++ b/indexStyles.css
@@ -173,9 +173,18 @@ body
     flex-wrap: nowrap;
     flex-direction: column;
     align-items: center;
+	background-image: url('Patima.jpeg');
+	background-size: 1440px;
 }
 
 #main.content
 {
 	flex: 1;
+}
+
+.tekoFont {
+  font-family: "Teko", sans-serif;
+  /*font-optical-sizing: auto;*/
+  /*font-weight: 200;*/
+  /*font-style: normal;*/
 }
